--- a/src/back/.vscode/launch.json
+++ b/src/back/.vscode/launch.json
@@ -11,8 +11,16 @@
             "request": "launch",
             "mode": "auto",
             "cwd": "${workspaceFolder}",
-            
             "program": "${workspaceFolder}/cmd/main"
+        },
+        {
+            "name": "Debug migrations",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "cwd": "${workspaceFolder}"
+            , "program": "${workspaceFolder}/main.go",
+            "args": ["migrate", "test_migration", "-g"]
         }
     ]
 }
